--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,18 @@ img:hover {
 }
 
 /* create your tile classes! we recommend .small .med .large */
+
+.small {
+  height: 100%;
+  width: 100%;
+}
+
+.med {
+  height: 200%;
+  width: 200%;
+}
+
+.large {
+  height: 300%;
+  width: 300%;
+}
